fix: fix scrollbar

--- a/wp-app/wp-content/themes/attract/modules/services/services.scss
+++ b/wp-app/wp-content/themes/attract/modules/services/services.scss
@@ -49,11 +49,15 @@
             margin: 20px calc((100% - 100vw) / 2) 0;
             padding: 0 15px 15px;
             overflow: auto;
-            scrollbar-width: none;
+            // scrollbar-width: none;
 
             &::-webkit-scrollbar {
                 width: 0;
-                height: 0;
+                height: 0.25em;
+            }
+            &::-webkit-scrollbar-thumb {
+                background-color: $c-border;
+                border-radius: 5px;
             }
         }
     }
@@ -67,6 +71,7 @@
 
         &.js-active {
             color: $c-blue;
+            box-shadow: 0px 1px 0px 0px $c-blue;
         }
     }
 
